# my_data-structures-project

./: pyproject.toml
src/: linked_list.py  queue.py  stack.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
